<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.Setting"
    android:background="@color/gray9">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin">

<!--        个人信息、收货地址-->
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin">

    <com.lqr.optionitemview.OptionItemView
        android:id="@+id/iv_person_info"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        app:left_src="@mipmap/setting_people"
        app:left_text="@string/setting_item1"
        app:right_src="@mipmap/arrow_forward" />

    <com.lqr.optionitemview.OptionItemView
        android:id="@+id/iv_location"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        app:left_src="@mipmap/setting_location"
        app:left_text="@string/setting_item2"
        app:right_src="@mipmap/arrow_forward"/>
    </LinearLayout>

<!--        关于-->
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin">

    <com.lqr.optionitemview.OptionItemView
        android:id="@+id/setting_more"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        app:left_src="@mipmap/setting_more"
        app:left_text="@string/setting_item3"
        app:right_src="@mipmap/arrow_forward"/>

    </LinearLayout>

<!--        退出登录-->
        <Button
            android:id="@+id/exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/white"
            android:textColor="@color/red0"
            android:text="@string/exit"/>

    </LinearLayout>

</LinearLayout>